D10 cleanup + split (2023)